# ai-bookcodes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add.sh
.ipynb_checkpoints/: README-checkpoint.md
content/C++Primer-Plus/: CMakeLists.txt
content/C++Primer-Plus/Chapter 14/: arraytp.h  frnd2tmp.cpp  manyfrnd.cpp  pairs.cpp  stacktem.cpp  stacktp.h  stckoptr1.cpp  stcktp1.h  tempmemb.cpp  tempparm.cpp
content/advanced-compiler/: CMakeLists.txt  a.out  demoApp  demoApp2  function.c  function.h  main.c
content/advanced-compiler/build-qt-project-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qt-project  qtcsettings.cmake
content/c++primier-5/: CMakeLists.txt
content/computer-system/: WORKSPACE  bazel-bin  bazel-computer-system  bazel-out  bazel-testlogs
content/concurrency-in-go/: go.mod
content/ml_cn/: test.ipynb
content/my-go/: first-go.ipynb
content/myoffer/: Untitled.ipynb  bert.py  dp.py  linked_node.py  number_string_generator.py  number_string_generator_test.py  search.py  sort.py  test.ipynb
content/on-going/: pom.xml
content/pyqt-project2/: form.ui  mainwindow.py
content/python-learning/: pyyaml.ipynb
content/pytorch-learning/: random.ipynb
content/qtpython-project3/: form.ui  qtpython-project3.pyproject  widget.py
content/scikit-learn-cn/: ch02.01.ipynb  ch02.02.ipynb  ch02.03.ipynb  ch02.04.ipynb  ch02.05.ipynb  ch02.06.ipynb  ch03.01.ipynb  ch03.02.ipynb  ch04.01.ipynb  ch05.01.ipynb  ch05.02.ipynb  digits_svm.pkl  requirements.txt
content/tlpi/: README
(+146 files in other folders)
